tests/snapshots/errors/type_error_function_return.mc
fun get_int() -> int {
    return "hello";
}
